--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.1
-	loader_version=0.10.6+build.214
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.1
+	loader_version=0.14.8
 
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = mod.azure.goldenberry
-	archives_base_name = Golden-Berry-Mod-Fabric-1.16.4
+	archives_base_name = Golden-Berry-Mod-Fabric-1.19.2
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.1+build.416-1.16
-	
-	# Curse
-	curse_id=402964
-	curse_release=release
+	fabric_version=0.58.6+1.19.2
